Update 404 page text, add meetup to footer, fix footer link styling

--- a/404.md
+++ b/404.md
@@ -6,13 +6,14 @@ image:
   feature: sangeh-monkey-forest-10.jpg
 ---  
 <figure>
-<img src="{{ site.url }}/images/hmfaysal-404.jpg" alt="{{ page.title }} at {{ site.title }}">
+  <img src="{{ site.url }}/images/hmfaysal-404.jpg" alt="{{ page.title }} at {{ site.title }}">
 </figure>
 <div class="text-center">
-<h1>I am sorry</h1>
-<p>The Adorable Monkey has eaten the page you are looking for,
-please try one of the links below instead</p>
+  <h1>Oh gosh!</h1>
+  <p>We've done gotten turned around and can't find the page you're looking for.  Our apologies!</p>
+  <p>If you saw this page in your own Rails app, you might try checking out out your <strong>routes</strong> for help figuring out the URL you were looking for.  Remember: you can run <strong>"rake routes"</strong> from your terminal to see what routes are available in your app!</p>
+  <p>...Buuut since this is our site and not your own, we recommend just trying the links below.</p>
 </div>
 <figure>
-<img src="{{ site.url }}/images/bg-arrow.png" alt="down-arrow">
+  <img src="{{ site.url }}/images/bg-arrow.png" alt="down-arrow">
 </figure>
